# arpeggio

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: mkdocs.yml
examples/: happy_birthday.arp
src/arpeggio/: __init__.py  __main__.py  arp_ast.py  arpeggio.lark  exceptions.py  instrument.py  interpreter.py  key.py  mode.py  note.py  parser.py  song.py  track.py  validation.py
src/arpeggio/engine/: __init__.py  audio.py  instrument.py  key.py  note.py  song.py  track.py
src/glissando/: instrument.py  key.py  note.py  song.py  track.py
tests/: conftest.py  test_interpreter.py  test_key.py  test_mode.py  test_note.py  test_parser.py
tests/examples/: demo_song.arp  demo_song2.arp  happy_birthday.arp  knuckle_song.arp  office_theme.arp  only_murders.arp  twinkle_twinkle.arp
tests/output/: test_interpret_example_songs_demo_song2_.npz  test_interpret_example_songs_demo_song_.npz  test_interpret_example_songs_happy_birthday_.npz  test_interpret_example_songs_knuckle_song_.npz  test_interpret_example_songs_office_theme_.npz  test_interpret_example_songs_only_murders_.npz  test_interpret_example_songs_twinkle_twinkle_.npz
